@@ -8,7 +8,7 @@ import com.software.modsen.rideservice.mapper.RideMapper;
 import com.software.modsen.rideservice.model.Ride;
 import com.software.modsen.rideservice.model.RideStatus;
 import com.software.modsen.rideservice.service.RideService;
-import org.joda.time.DateTime;
+import com.software.modsen.rideservice.util.RideTestUtil;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
@@ -17,14 +17,16 @@ import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 
-import java.time.LocalDateTime;
-import java.util.Collections;
 import java.util.List;
 
+import static com.software.modsen.rideservice.util.RideTestUtil.ACCEPTED_RIDE_STATUS;
+import static com.software.modsen.rideservice.util.RideTestUtil.DEFAULT_ID;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyLong;
-import static org.mockito.Mockito.*;
+import static org.mockito.Mockito.times;
+import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.when;
 
 @ExtendWith(MockitoExtension.class)
 public class RideControllerUnitTest {
@@ -37,7 +39,7 @@ public class RideControllerUnitTest {
 
     @Test
     public void testGetAllRides() {
-        List<Ride> rideList = Collections.singletonList(new Ride());
+        List<Ride> rideList = List.of(RideTestUtil.getDefaultAcceptedRide());
         when(rideService.gelAllRides()).thenReturn(rideList);
 
         ResponseEntity<RideListResponse> response = rideController.getAllRides();
@@ -48,42 +50,46 @@ public class RideControllerUnitTest {
 
     @Test
     public void testGetRideById() {
-        Ride ride = new Ride(1L, 1L, 1L, "a","b",null, LocalDateTime.now(), RideStatus.CREATED);
-        RideResponse rideResponse = new RideResponse(1L, 1L, 1L, "a","b",null, LocalDateTime.now(), RideStatus.CREATED);
+        Ride ride = RideTestUtil.getDefaultAcceptedRide();
+        RideResponse rideResponse = RideTestUtil.getDefaultRideResponse();
         when(rideService.getRide(anyLong())).thenReturn(ride);
+        when(rideMapper.toResponse(any(Ride.class))).thenReturn(rideResponse);
 
-        ResponseEntity<RideResponse> response = rideController.getRideById(1L);
+        ResponseEntity<RideResponse> resultResponse = rideController.getRideById(1L);
 
         verify( rideService, times(1)).getRide(1L);
-        assertEquals(HttpStatus.OK, response.getStatusCode());
-        assertEquals(rideResponse, response.getBody());
+        assertEquals(HttpStatus.OK, resultResponse.getStatusCode());
+        assertEquals(rideResponse, resultResponse.getBody());
     }
 
     @Test
     public void testCreateRide() {
-        Ride ride = new Ride(1L, 1L, 1L, "a","b",null, LocalDateTime.now(), RideStatus.CREATED);
-        RideRequest rideRequest = new RideRequest(1L, 1L,"a","b");
-        RideResponse rideResponse = new RideResponse(1L, 1L, 1L, "a","b",null, LocalDateTime.now(), RideStatus.CREATED);
+        Ride ride = RideTestUtil.getDefaultCreatedRide();
+        RideRequest rideRequest = RideTestUtil.getDefaultRideRequest();
+        RideResponse expectedRideResponse = RideTestUtil.getDefaultRideResponse();
 
+        when(rideMapper.toModel(any(RideRequest.class))).thenReturn(ride);
         when(rideService.createRide(any(Ride.class))).thenReturn(ride);
+        when(rideMapper.toResponse(any(Ride.class))).thenReturn(expectedRideResponse);
 
-        ResponseEntity<RideResponse> response = rideController.createRide(rideRequest);
+        ResponseEntity<RideResponse> resultResponse = rideController.createRide(rideRequest);
 
-        assertEquals(HttpStatus.CREATED, response.getStatusCode());
-        assertEquals(rideResponse, response.getBody());
+        assertEquals(HttpStatus.CREATED, resultResponse.getStatusCode());
+        assertEquals(expectedRideResponse, resultResponse.getBody());
         verify(rideService, times(1)).createRide(ride);
     }
 
     @Test
     public void testChangeRideStatus() {
-        Ride ride = new Ride();
-        RideResponse rideResponse = new RideResponse();
-        when(rideService.changeRideStatus(anyLong(), any(RideStatus.class))).thenReturn(ride);
+        Ride ride = RideTestUtil.getDefaultCreatedRide();
+        RideResponse rideResponse = RideTestUtil.getDefaultRideResponse();
 
-        ResponseEntity<RideResponse> response = rideController.changeRideStatus(1L, RideStatus.FINISHED);
+        when(rideService.changeRideStatus(anyLong(), any(RideStatus.class))).thenReturn(ride);
+        when(rideMapper.toResponse(any(Ride.class))).thenReturn(rideResponse);
+        ResponseEntity<RideResponse> response = rideController.changeRideStatus(DEFAULT_ID, ACCEPTED_RIDE_STATUS);
 
         assertEquals(HttpStatus.OK, response.getStatusCode());
         assertEquals(rideResponse, response.getBody());
-        verify(rideService, times(1)).changeRideStatus(1L, RideStatus.FINISHED);
+        verify(rideService, times(1)).changeRideStatus(DEFAULT_ID, ACCEPTED_RIDE_STATUS);
     }
 }
